--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-charts-react": "^11.0.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "sass": "^1.83.0"
